tests/compile-pass/constant-warning.to
const Values: Set[String] = Set["key", "\u{6b}ey"]
