tests/compile-fail/duplicate-map-key.to
const Entries: Map[String, Int] = ["key": 1, "\u{6b}ey": 2]
